[package]
name = "oshiro"
version = "0.1.0"
authors = ["emma bridgers <emma@miwa.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
tracing-subscriber = "0.2.18"
twilight-cache-inmemory = "0.5.0"
twilight-command-parser = "0.5.0"
twilight-gateway = "0.5.0"
twilight-http = "0.5.0"
twilight-model = "0.5.0"
twilight-standby = "0.5.0"
dotenv = "0.15.0"
chrono = "0.4.19"

[dependencies.tokio]
version = "^1.0"
features = ["full"]
