[package]
name = "oshiro"
version = "0.1.0"
authors = ["emma bridgers <emma@miwa.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.2.18"
twilight-cache-inmemory = "0.14"
twilight-gateway = {version = "^0.15", features = ["native", "zlib-simd", "twilight-http"]}
twilight-http = {version = "^0.15", features = ["native"]}
twilight-model = "^0.15"
twilight-standby = "^0.15"
dotenv = "0.15.0"
chrono = "0.4.19"
futures = "0.3.28"
tracing = "0.1.37"
simd-json = "0.7.0"

[dependencies.tokio]
version = "^1.0"
features = ["full"]
