[package]
name = "oshiro"
version = "0.1.0"
authors = ["emma bridgers <emma@miwa.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "^0.3"
twilight-cache-inmemory = "^0.15"
twilight-gateway = {version = "^0.15", features = ["native", "zlib-simd", "twilight-http"]}
twilight-http = {version = "^0.15", features = ["native"]}
twilight-model = "^0.15"
twilight-standby = "^0.15"
dotenv = "0.15.0"
chrono = "0.4.19"
futures = "0.3.28"
tracing = "0.1.37"
# Note: simd-json does not require a simd compatible cpu to compile, but it's very recommended
# My CI is on an extremely old machine which doesn't have support
simd-json = {version = "0.7.0", features = ["allow-non-simd"]}

[dependencies.tokio]
version = "^1.0"
features = ["full"]
